<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.NewAuctionActivity">

        <TextView
            android:id="@+id/auction_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/auction_title"
            android:textSize="40sp"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:minWidth="200dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Title"
                android:ems="100"
                android:hint="@string/sample_title"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:minWidth="200dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/auction_description"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Description"
                android:breakStrategy="balanced"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/sample_desc"
                android:inputType="textMultiLine"
                android:padding="5sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:minWidth="200dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:scrollbarSize="30dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/radio_group_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:checkedButton="@id/radio_english"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:onClick="onCategoryRadioClicked"
                android:text="@string/auction_type_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_sealed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:onClick="onCategoryRadioClicked"
                android:text="@string/auction_type_2"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:minWidth="200dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_min_amount"
                android:layout_width="327dp"
                android:layout_height="47dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:text="@string/min_bid_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/starting_bid"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="Starting bid"
                android:hint="@string/min_bid_hint"
                android:inputType="numberDecimal"
                android:maxLength="12" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:paddingHorizontal="10dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/text_start_date"
                android:layout_width="153dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:text="@string/start_date_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinner_days"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="18dp"
                android:scrollbarSize="30dp"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/select_image_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/radio_group_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_collectible_image"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_collectible_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/collectible"
                android:onClick="onImageRadioClicked" />

            <RadioButton
                android:id="@+id/radio_electronic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/iphone"
                android:onClick="onImageRadioClicked" />

            <RadioButton
                android:id="@+id/radio_jewellery_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/jewellery"
                android:onClick="onImageRadioClicked" />
        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-thin"
            android:onClick="buttonAuctionCreateOnClick"
            android:text="@string/create_button_label"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>

