...
    <string name="sample_username">username</string>
    <string name="bid_button_label">Place bid</string>
    <string name="auction_image_desc">Auction image</string>
    <string name="product_title">Product Name</string>
    <string name="sample_starting_bid">$200</string>
    <string name="sample_time_left">0d 0h</string>
    <string name="bid_label">0 bids</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="warning">Warning</string>
    <string name="home_label">Home</string>
    <string name="categories_label">Categories</string>
    <string name="collectibles_category">Collectibles</string>
    <string name="jewellery_category">Jewellery</string>
...
